k8s/green/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-example
  name: gitops-example-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-example
      version: v2.0.0
  template:
    metadata:
      labels:
        app: gitops-example
        version: v2.0.0
    spec:
      containers:
        - image: gcr.io/PROJECT_ID/IMAGE:TAG
          name: gitops-example
          ports:
            - name: http
              containerPort: 8050
